layout fixed,post and users view created.

--- a/StepOverflow/StepOverflow.csproj
+++ b/StepOverflow/StepOverflow.csproj
@@ -25,4 +25,10 @@
     <Folder Include="Areas\Authentication\Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\assets\step.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
